css/style.css
* {
  background-color: darkcyan;
}
body {
  color: orange;
  font-family: Arial, Tahoma, sans-serif;
  font-size: 100%;
}
header {
  width: 100%;
}
section {
  margin: 10px;
  display: block;
}
h3 {
  font-size: 1.2em;
  font-weight: bolder;
  display: block;
  margin: 0.4em 0.1em;
}
ul {
  list-style: circle outside;
  padding-left: 2em;
  margin: 0.4em 0em;
}
li {
  margin: 0.2em 0em;
}

